added images folder, changes in float and clear assignment and created new assignment display property

--- a/float_and_clear2.html
+++ b/float_and_clear2.html
@@ -43,6 +43,6 @@
         <li>Contact Us</li>
         <li>Donate</li>
     </ul>
-    <p><img src="./images/elena-email-beach.png" id="img1"><img src="./images/elena-email-car.png" id="img2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, nulla incidunt! Sed reprehenderit sunt quos consequuntur id, magni expedita est. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod modi error nam veniam, sint saepe ut necessitatibus ab sapiente unde excepturi dicta amet facilis fugit adipisci a quisquam reiciendis officia!</p>
+    <p><img src="./images_folder/elena-email-beach.png" id="img1"><img src="./images_folder/elena-email-car.png" id="img2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, nulla incidunt! Sed reprehenderit sunt quos consequuntur id, magni expedita est. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod modi error nam veniam, sint saepe ut necessitatibus ab sapiente unde excepturi dicta amet facilis fugit adipisci a quisquam reiciendis officia!</p>
 </body>
 </html>
